--- a/shop-by-brand-listing-sample/index.html
+++ b/shop-by-brand-listing-sample/index.html
@@ -708,17 +708,16 @@
 
 
 <script type="text/javascript" src="./brands.js"></script>
-
 <script>
-	let alphabetNav = document.getElementById("alphabetNav");
-	let brandListingData = document.getElementById("brandListingData");
+    let alphabetNav = document.getElementById("alphabetNav");
+    let brandListingData = document.getElementById("brandListingData");
     let featuredBrandsData = document.getElementById("featuredBrandsData");
 
-	const loadAlphabetNav = () => {
-		alphabetNav.innerHTML = `<a href="#" class="alphabetFilter active">ALL</a>`;
-		alphabetNav.innerHTML += brandsData.map(brand => {
-			return brand.brands.length == 0 ? `<a href="#" class="alphabetFilter disabled" disabled>${brand.id}</a>` : `<a href="#" class="alphabetFilter">${brand.id}</a>`;
-		}).join("");
+    const loadAlphabetNav = () => {
+        alphabetNav.innerHTML = `<a href="#" class="alphabetFilter active">ALL</a>`;
+        alphabetNav.innerHTML += brandsData.map(brand => {
+            return brand.brands.length == 0 ? `<a href="#" class="alphabetFilter disabled" disabled>${brand.id}</a>` : `<a href="#" class="alphabetFilter">${brand.id}</a>`;
+        }).join("");
 
         const alphabetFilter = document.querySelectorAll('.alphabetFilter');
         
@@ -738,8 +737,9 @@
         return featuredBrandsArr;      
     }
 
-    const featuredBrandHtml = (img, brand) => {
+    const featuredBrandHtml = (img, brand, url) => {
         let html = `
+        <a href="${url}">
             <div class="card m-3">
                 <div class="card-body align-items-center d-flex justify-content-center">
 					<img src=${img} class="img-fluid border-0 my-auto featuredImg" />					
@@ -748,6 +748,7 @@
                     <p class="booker">${brand}</p>
                 </div>                   
             </div>
+        </a>
         `
         return html;
     }
@@ -778,10 +779,10 @@
         featuredBrandsData.innerHTML = ``;
         featuredBrandsData.innerHTML += featuredBrands.filter(function(brand) {
             if (alphabet != '' && alphabet != 'ALL') {
-				return brand.alphabet === alphabet
-			}
+                return brand.alphabet === alphabet
+            }
             return brand
-        }).map(b => featuredBrandHtml(b.img, b.name)).join("");
+        }).map(b => featuredBrandHtml(b.img, b.name, b.url)).join("");
         if (featuredBrandsData.innerHTML.length > 0) {
             featuredBrandsData.innerHTML = `<div class="container mt-3">FEATURED STORES</div>${featuredBrandsData.innerHTML}`;
         }
@@ -789,30 +790,31 @@
 
 
     const loadBrandListingData = (alphabet = '') => {
-			brandListingData.innerHTML = '';
-			brandListingData.innerHTML += brandsData.filter(function(item) {
-				if (alphabet != '' && alphabet != 'ALL') {
-					return item.id === alphabet
-				}
-				return item.brands.length > 0 ? item : false 
-			}).map(brand => `
-				<hr>
-					<div class="row">
-				  	<h4 class="booker text-left position-absolute">
-					  	${brand.id}
-				  	</h4>
-					</div>
-				<div class="row">
-				  ${brand.brands.map((b) => {
-						 return b.active == true && !b.featured == true ? `<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 p-1"><a href="${b.url}" class="brandLink">${b.name}</a></div>` : ``
-			      }).join("")}
-				</div>
-			`).join("");
+            brandListingData.innerHTML = '';
+            brandListingData.innerHTML += brandsData.filter(function(item) {
+                if (alphabet != '' && alphabet != 'ALL') {
+                    return item.id === alphabet
+                }
+                return item.brands.length > 0 ? item : false 
+            }).map(brand => `
+                <hr>
+                    <div class="row">
+                    <h4 class="booker text-left position-absolute">
+                        ${brand.id}
+                    </h4>
+                    </div>
+                <div class="row">
+                  ${brand.brands.map((b) => {
+                         return b.active == true && !b.featured == true ? `<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 p-1"><a href="${b.url}" class="brandLink">${b.name}</a></div>` : ``
+                  }).join("")}
+                </div>
+            `).join("");
     }
 
     loadAlphabetNav();
     loadBrandsData('ALL');
 </script>
+
 
 <script nonce="XRCWjv1IbJu3W9DUaOJtx6tkDwzvpXPQYPe6Owq01Wo=">
     $(document).ready(function () {
