--- a/shop-by-brand-listing-sample/no-brands/index.html
+++ b/shop-by-brand-listing-sample/no-brands/index.html
@@ -707,7 +707,7 @@
 </main>
 
 
-<script type="text/javascript" src="./brands.js"></script>
+<script type="text/javascript" src="./nobrands.js"></script>
 
 <script>
     let alphabetNav = document.getElementById("alphabetNav");
