--- a/shop-by-brand-listing-sample/one-brand/index.html
+++ b/shop-by-brand-listing-sample/one-brand/index.html
@@ -708,7 +708,7 @@
 </main>
 
 
-<script type="text/javascript" src="./nobrands.js"></script>
+<script type="text/javascript" src="./onebrand.js"></script>
 
 <script>
     let alphabetNav = document.getElementById("alphabetNav");
