--- a/real-time-stock/product-list/index.html
+++ b/real-time-stock/product-list/index.html
@@ -17076,6 +17076,11 @@ e.g. No Bigger than 6kg"
 $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
+<style>
+.stockLevel {
+      font-size: 0.625rem;
+  }
+</style>
 <script>
     function randomStockLevel() {
         let stockLevels = ['IN STOCK', 'LOW STOCK', 'NO STOCK'];
@@ -17085,7 +17090,7 @@ pageSearchUrl = '/products/search'
 
     function stockLevelHtml(level) {
         let bgClass = level == 'IN STOCK' ? 'bg-success' : level == 'LOW STOCK' ? 'bg-warning' : level == 'NO STOCK' ? 'bg-secondary' : false;
-        return `<span class="${bgClass} d-block text-center text-white pt-1 pb-1 pl-3 pr-3 rounded mt-2 mb-2">${level}</span>`;
+        return `<span class="${bgClass} d-block text-center text-white pt-1 pb-1 pl-3 pr-3 rounded mt-2 mb-2 stockLevel">${level}</span>`;
     }
 
     /* grid view */
