--- a/real-time-stock/product-list/index.html
+++ b/real-time-stock/product-list/index.html
@@ -17,6 +17,8 @@
 
     <link rel="stylesheet" href="https://www.booker.co.uk/css/facia/booker.css?v=2.2.33.0" />
 
+    <link rel="stylesheet" href="../rts.css" />
+
 
     <!-- Scripts -->
 
@@ -17076,44 +17078,7 @@ e.g. No Bigger than 6kg"
 $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
-<style>
-  .stockLevel {
-    font-size: 0.625rem;
-    font-weight: 700;  
-  }
 
-  @media (max-width: 767px) {
-    .stockLevelDiv {
-      max-width: 50%;
-      float: right;
-    }
-
-    .SubCategoriesRow .rowMode .product-list .product .shopping .add-note {
-      align-items: center !important;
-      padding-right: 0;
-    }
-  }
-
-  @media (max-width: 767.98px) {
-    .stockLevelDiv {
-      max-width: 50%;
-      margin-left: 20px;
-    }
-
-    .SubCategoriesRow .rowMode .product-list .product .shopping .add-note {
-      align-items: center !important;
-      padding-right: 0;
-    }
-  }
-
-    @media (max-width: 576px) {
-    .stockLevelDiv {
-      max-width: 100%;
-      margin-left: 25px;
-    }
-  }
-
-</style>
 <script>
 
     const noteIcon = `<i class="fa-solid fa-book fa-xl text-dark"></i>`;
@@ -17237,4 +17202,3 @@ pageSearchUrl = '/products/search'
 
 
 </html>
-
