--- a/web-components-4.3.1/index.html
+++ b/web-components-4.3.1/index.html
@@ -225,6 +225,14 @@
       data-textSize="14px"
       data-textColor="#000000"
     ></standard-copy>
+
+    <link-to-shop-search
+      id="link-to-shop-search"
+      data-headingText="Browse our range of Mixers & Soft Drinks"
+      data-img="https://cdn.worldvectorlogo.com/logos/schweppes-4.svg"
+      data-urlText="Visit Schweppes Store"
+    ></link-to-shop-search>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
