--- a/real-time-stock/product-search/shelf/index.html
+++ b/real-time-stock/product-search/shelf/index.html
@@ -4325,7 +4325,7 @@ Requires a card payment at checkout.">Marketplace</span>
 
 <div class="case-image d-none d-xl-block">
     <span class="case-quantity d-none d-xl-block">Case of 14</span>
-        <img class="box-img d-none d-xl-block mx-auto" src="/images/box.png" alt="box">
+        <img class="box-img d-none d-xl-block mx-auto" src="https://www.booker.co.uk/images/box.png" alt="box">
 
     <p class="case-weight text-overflow-center nobreak mb-0"> <text class="d-xl-none case-quantity">14 x</text> 150g</p>
 </div>
@@ -4499,7 +4499,7 @@ Requires a card payment at checkout.">Marketplace</span>
 
 <div class="case-image d-none d-xl-block">
     <span class="case-quantity d-none d-xl-block">Case of 14</span>
-        <img class="box-img d-none d-xl-block mx-auto" src="/images/box.png" alt="box">
+        <img class="box-img d-none d-xl-block mx-auto" src="https://www.booker.co.uk/images/box.png" alt="box">
 
     <p class="case-weight text-overflow-center nobreak mb-0"> <text class="d-xl-none case-quantity">14 x</text> 150g</p>
 </div>
@@ -4672,7 +4672,7 @@ Requires a card payment at checkout.">Marketplace</span>
 
 <div class="case-image d-none d-xl-block">
     <span class="case-quantity d-none d-xl-block">Case of 6</span>
-        <img class="box-img d-none d-xl-block mx-auto" src="/images/box.png" alt="box">
+        <img class="box-img d-none d-xl-block mx-auto" src="https://www.booker.co.uk/images/box.png" alt="box">
 
     <p class="case-weight text-overflow-center nobreak mb-0"> <text class="d-xl-none case-quantity">6 x</text> 340g</p>
 </div>
@@ -4842,7 +4842,7 @@ Requires a card payment at checkout.">Marketplace</span>
 
 <div class="case-image d-none d-xl-block">
     <span class="case-quantity d-none d-xl-block">Case of 8</span>
-        <img class="box-img d-none d-xl-block mx-auto" src="/images/box.png" alt="box">
+        <img class="box-img d-none d-xl-block mx-auto" src="https://www.booker.co.uk/images/box.png" alt="box">
 
     <p class="case-weight text-overflow-center nobreak mb-0"> <text class="d-xl-none case-quantity">8 x</text> 425g</p>
 </div>
@@ -5015,7 +5015,7 @@ Requires a card payment at checkout.">Marketplace</span>
 
 <div class="case-image d-none d-xl-block">
     <span class="case-quantity d-none d-xl-block">Case of 12</span>
-        <img class="box-img d-none d-xl-block mx-auto" src="/images/box.png" alt="box">
+        <img class="box-img d-none d-xl-block mx-auto" src="https://www.booker.co.uk/images/box.png" alt="box">
 
     <p class="case-weight text-overflow-center nobreak mb-0"> <text class="d-xl-none case-quantity">12 x</text> 400g</p>
 </div>
@@ -5192,7 +5192,7 @@ Requires a card payment at checkout.">Marketplace</span>
 
 <div class="case-image d-none d-xl-block">
     <span class="case-quantity d-none d-xl-block">Case of 5</span>
-        <img class="box-img d-none d-xl-block mx-auto" src="/images/box.png" alt="box">
+        <img class="box-img d-none d-xl-block mx-auto" src="https://www.booker.co.uk/images/box.png" alt="box">
 
     <p class="case-weight text-overflow-center nobreak mb-0"> <text class="d-xl-none case-quantity">5 x</text> 1kg</p>
 </div>
@@ -5365,7 +5365,7 @@ Requires a card payment at checkout.">Marketplace</span>
 
 <div class="case-image d-none d-xl-block">
     <span class="case-quantity d-none d-xl-block">Case of 7</span>
-        <img class="box-img d-none d-xl-block mx-auto" src="/images/box.png" alt="box">
+        <img class="box-img d-none d-xl-block mx-auto" src="https://www.booker.co.uk/images/box.png" alt="box">
 
     <p class="case-weight text-overflow-center nobreak mb-0"> <text class="d-xl-none case-quantity">7 x</text> 125g</p>
 </div>
@@ -5539,7 +5539,7 @@ Requires a card payment at checkout.">Marketplace</span>
 
 <div class="case-image d-none d-xl-block">
     <span class="case-quantity d-none d-xl-block">Case of 12</span>
-        <img class="box-img d-none d-xl-block mx-auto" src="/images/box.png" alt="box">
+        <img class="box-img d-none d-xl-block mx-auto" src="https://www.booker.co.uk/images/box.png" alt="box">
 
     <p class="case-weight text-overflow-center nobreak mb-0"> <text class="d-xl-none case-quantity">12 x</text> 80g</p>
 </div>
@@ -5711,7 +5711,7 @@ Requires a card payment at checkout.">Marketplace</span>
 
 <div class="case-image d-none d-xl-block">
     <span class="case-quantity d-none d-xl-block">Case of 9</span>
-        <img class="box-img d-none d-xl-block mx-auto" src="/images/box.png" alt="box">
+        <img class="box-img d-none d-xl-block mx-auto" src="https://www.booker.co.uk/images/box.png" alt="box">
 
     <p class="case-weight text-overflow-center nobreak mb-0"> <text class="d-xl-none case-quantity">9 x</text> 100g</p>
 </div>
@@ -5886,7 +5886,7 @@ Requires a card payment at checkout.">Marketplace</span>
 
 <div class="case-image d-none d-xl-block">
     <span class="case-quantity d-none d-xl-block">Case of 9</span>
-        <img class="box-img d-none d-xl-block mx-auto" src="/images/box.png" alt="box">
+        <img class="box-img d-none d-xl-block mx-auto" src="https://www.booker.co.uk/images/box.png" alt="box">
 
     <p class="case-weight text-overflow-center nobreak mb-0"> <text class="d-xl-none case-quantity">9 x</text> 80g</p>
 </div>
@@ -7406,7 +7406,7 @@ Requires a card payment at checkout.">Marketplace</span>
 
 <div class="case-image d-none d-xl-block">
     <span class="case-quantity d-none d-xl-block">Case of 9</span>
-        <img class="box-img d-none d-xl-block mx-auto" src="/images/box.png" alt="box">
+        <img class="box-img d-none d-xl-block mx-auto" src="https://www.booker.co.uk/images/box.png" alt="box">
 
     <p class="case-weight text-overflow-center nobreak mb-0"> <text class="d-xl-none case-quantity">9 x</text> 900g</p>
 </div>
