--- a/real-time-stock/recent-purchases/shelf/index.html
+++ b/real-time-stock/recent-purchases/shelf/index.html
@@ -19332,4 +19332,6 @@ $(document).ready(function(){ suggestion.branch = 'B50300';})
 pageSearchUrl = '/products/search'
 </script>
 
+<script src="../../shelf.js"></script>
+	
 </html>
