--- a/shop-by-brand-listing-sample/mixture-of-brands/index.html
+++ b/shop-by-brand-listing-sample/mixture-of-brands/index.html
@@ -707,7 +707,7 @@
 </main>
 
 
-<script type="text/javascript" src="../brands.js"></script>
+<script type="text/javascript" src="../mixofbrands.js"></script>
 <script type="text/javascript" src="../brandlistingscript.js"></script>
 
 
