--- a/real-time-stock/oe-collect/shelfshoppinglist/index.html
+++ b/real-time-stock/oe-collect/shelfshoppinglist/index.html
@@ -6270,8 +6270,8 @@ e.g. No Bigger than 6kg"
         </script>
 
 
-<script type='text/javascript' src='/scripts/main-nav/main-nav.js'></script>
-<script type='text/javascript' src='/scripts/suggestion/keyword-suggestion.js'></script>
+<script type='text/javascript' src='https://www.booker.co.uk/scripts/main-nav/main-nav.js'></script>
+<script type='text/javascript' src='https://www.booker.co.uk/scripts/suggestion/keyword-suggestion.js'></script>
 <script type='text/javascript' nonce='tNS8hHNZ6fFdoLwxqK0+q74SFAKO5HDkniN9hp4usts='>
 $(document).ready(function(){ suggestion.branch = 'B19100';})
 pageSearchUrl = '/products/search'
