--- a/real-time-stock/oe-collect/shelfshoppinglist/index.html
+++ b/real-time-stock/oe-collect/shelfshoppinglist/index.html
@@ -8,9 +8,9 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="shortcut icon" type="image/x-icon" href="http://www.booker.co.uk/images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://www.booker.co.uk/images/favicon.ico" />
     <!-- Styles -->
-    <link href="http://www.booker.co.uk/bundles/css?v=Nrg0BxlmargcCrFzQeKrPKs91VtXzSlushF_UUamKAg1" rel="stylesheet"/>
+    <link href="https://www.booker.co.uk/bundles/css?v=Nrg0BxlmargcCrFzQeKrPKs91VtXzSlushF_UUamKAg1" rel="stylesheet"/>
 
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -48,7 +48,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" />
 
-    <script src="http://www.booker.co.uk/bundles/js?v=7j7OKaMd4yj6_B0wdk_KwEDigj2I4CW2F5G764ZMP0U1"></script>
+    <script src="https://www.booker.co.uk/bundles/js?v=7j7OKaMd4yj6_B0wdk_KwEDigj2I4CW2F5G764ZMP0U1"></script>
 
 
     <script type='text/javascript' src='https://static.queue-it.net/script/queueclient.min.js'></script>
@@ -111,7 +111,7 @@
         <div id="search-bar" class="row d-flex justify-content-between">
             <div id="logo" class="justify-content-start ml-3 d-flex flex-column">
                 <a href="/my-booker" class="d-flex  justify-content-start">
-                    <img src="http://www.booker.co.uk/images/booker.png" alt="Booker Logo">
+                    <img src="https://www.booker.co.uk/images/booker.png" alt="Booker Logo">
                 </a>
                     <span id="store" class="font-weight-light d-flex  justify-content-start">Warwick</span>
             </div>
@@ -285,7 +285,7 @@
             <span class="title">Extended Range Collect</span>
 
         <div class="content">
-            <img src="http://www.booker.co.uk/images/orange-trolley.png" alt="orange trolley">
+            <img src="https://www.booker.co.uk/images/orange-trolley.png" alt="orange trolley">
             <span class="pounds-label font-weight-bold">£{{ ClickAndCollectTrolley.Amount }}</span>
             <span class="cases-label">{{ ClickAndCollectTrolley.Cases }} CASES ({{ ClickAndCollectTrolley.Lines }} LINES)</span>
         </div>
@@ -296,7 +296,7 @@
     <div id="delivery" class="header-button pointer col {{#ifEquals ActiveTrolleyType "2" }}green-background{{/ifEquals}}" onclick="ActivateDeliveryTrolley(this, 'Delivery')">
         <span class="title">Delivery</span>
         <div class="content">
-            <img src="http://www.booker.co.uk/images/green-truck.png" alt="white truck">
+            <img src="https://www.booker.co.uk/images/green-truck.png" alt="white truck">
             <span class="pounds-label font-weight-bold">£{{ DeliveryTrolley.Amount }}</span>
             <span class="cases-label">{{ DeliveryTrolley.Cases }} CASES ({{ DeliveryTrolley.Lines }} LINES)</span>
         </div>
@@ -379,7 +379,7 @@
         <div class="col d-flex justify-content-start">
             <div id="logo" class="center-logo d-flex flex-column">
                 <a href="/my-booker" class="d-flex justify-content-center">
-                    <img src="http://www.booker.co.uk/images/booker.png" alt="Booker Logo">
+                    <img src="https://www.booker.co.uk/images/booker.png" alt="Booker Logo">
                 </a>
                     <span id="store" class="font-weight-light d-flex justify-content-center">Warwick</span>
             </div>
@@ -412,7 +412,7 @@
         <div class="w-50">
             <div id="delivery" class="header-button d-flex flex-row {{#ifEquals ActiveTrolleyType "2" }}green-background{{/ifEquals}}" onclick="ActivateDeliveryTrolley(this, 'Delivery')">
                 <div class="icon d-flex align-items-center">
-                    <img class="" src="http://www.booker.co.uk/images/green-truck.png" alt="white truck">
+                    <img class="" src="https://www.booker.co.uk/images/green-truck.png" alt="white truck">
                 </div>
                 <div class="labels ml-auto w-100">
                     <p class="mb-0">£{{ DeliveryTrolley.Amount }}</p>
@@ -510,9 +510,9 @@
 
 <div id="scanner-components"></div>
 
-<script src="http://www.booker.co.uk/scripts/trolley.js?version=2.2.33.0"></script>
-<script src="http://www.booker.co.uk/scripts/products.js?version=2.2.33.0"></script>
-<script src="http://www.booker.co.uk/scripts/notes.js"></script>
+<script src="https://www.booker.co.uk/scripts/trolley.js?version=2.2.33.0"></script>
+<script src="https://www.booker.co.uk/scripts/products.js?version=2.2.33.0"></script>
+<script src="https://www.booker.co.uk/scripts/notes.js"></script>
 <script>
     function getCookieValue(cookieName) {
         var value = document.cookie.match('(^|[^;]+)\\s*' + cookieName + '\\s*=\\s*([^;]+)');
