--- a/real-time-stock/product-list/shelf/index.html
+++ b/real-time-stock/product-list/shelf/index.html
@@ -16914,6 +16914,6 @@ $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
 
-<script src="../../noscript.js"></script>
+<script src="../../noshelf.js"></script>
 
 </html>
